# kuka

./: LICENSE.md  README.md  kuka.rosinstall
kuka/: package.xml
kuka_agilus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kuka_agilus_moveit_config/config/: controllers.yaml  controllers.yaml~  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kuka_agilus.srdf  kuka_agilus.srdf~  ompl_planning.yaml
kuka_agilus_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_agilus_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_planning_execution.launch~  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kuka_agilus_support/: CMakeLists.txt  CMakeLists.txt~  package.xml
kuka_agilus_support/config/: robot_state_visualize.rviz
kuka_agilus_support/launch/: load_agilus.launch  load_agilus.launch~  test_agilus.launch
kuka_agilus_support/urdf/: agilus.xacro  agilus_macro.xacro  agilus_macro.xacro~
kuka_controllers/: CMakeLists.txt  package.xml
kuka_driver/: CMakeLists.txt  package.xml
kuka_driver/include/kuka_driver/: kuka_rsi_router.h  udp_server_real_time.h
kuka_driver/launch/: robot_interface_streaming.launch  start_rsi_router_and_client.launch
kuka_driver/scripts/: rsi_client_emu.py  rsi_ext_control_client.py
kuka_driver/src/kuka_driver/: kuka_rsi_connection.py  kuka_rsi_driver.py
kuka_ipk_kr6r900sixx_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kuka_ipk_kr6r900sixx_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kuka_kr6r900sixx.srdf  ompl_planning.yaml
kuka_ipk_kr6r900sixx_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_kr6r900sixx_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kuka_ipk_kr6r900sixx_support/: CMakeLists.txt  package.xml
kuka_ipk_kr6r900sixx_support/config/: ag1_controller_joint_names.yaml  ag1_hw_controllers.yaml  ag1_params.yaml  ag1_params_sim.yaml  ag2_controller_joint_names.yaml  ag2_hw_controllers.yaml  ag2_params.yaml
kuka_ipk_kr6r900sixx_support/launch/: robot_interface.launch  start_robot_planning.launch
kuka_ipk_kr6r900sixx_support/urdf/: kr6r900sixx.xacro  kuka_agilus_pedestal_macro.xacro
kuka_ipk_large_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kuka_ipk_large_cell_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robotic_cell_large.srdf
kuka_ipk_large_cell_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robotic_cell_large_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kuka_ipk_large_cell_support/: CMakeLists.txt  package.xml
kuka_ipk_large_cell_support/config/: kr16_controller_joint_names.yaml  kr16_hw_controllers.yaml  kr16_params_sim.yaml  qu1_controller_joint_names.yaml  qu1_hw_controllers.yaml  qu1_params_sim.yaml  qu2_controller_joint_names.yaml  qu2_hw_controllers.yaml
kuka_ipk_large_cell_support/launch/: robot_interface.launch  start_robot_planning.launch
kuka_ipk_large_cell_support/urdf/: kuka_kr16_pedestal_macro.xacro  kuka_kr5arc_pedestal_macro.xacro  kuka_quantec_base_bracket_macro.xacro  robotic_cell_large.xacro
kuka_kr120_gazebo/: CMakeLists.txt  package.xml
kuka_kr120_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kuka_kr120_support/: CMakeLists.txt  package.xml
kuka_kr120_support/config/: robot_state_visualize.rviz
kuka_kr120_support/launch/: test_kr120r2500pro.launch
kuka_kr120_support/meshes/r2500pro/collision/: base_link.stl  base_link_interface_box.stl  link_1.stl  link_1_motor1.stl  link_1_motor2.stl  link_2.stl  link_3.stl  link_3_motor1.stl  link_3_motor2.stl  link_3_motor3.stl  link_3_motor4.stl  link_4.stl  link_5.stl  link_6.stl
kuka_kr120_support/meshes/r2500pro/visual/: base_link.stl  base_link_interface_box.stl  link_1.stl  link_1_motor1.stl  link_1_motor2.stl  link_2.stl  link_3.dae  link_3.stl  link_3_motor1.stl  link_3_motor2.stl  link_3_motor3.stl  link_4.dae  link_4.stl  link_5.dae  link_5.stl  link_6.dae  link_6.stl
kuka_kr120_support/urdf/: kr120r2500pro_macro.xacro
kuka_kr16_moveit_config/: .setup_assistant  package.xml
kuka_kr16_support/: CMakeLists.txt  package.xml
kuka_kr5_support/: CMakeLists.txt  package.xml
kuka_kr5_support/config/: robot_state_visualize.rviz
kuka_kr5_support/launch/: load_kr5arc.launch  test_kr5arc.launch
kuka_kr5_support/meshes/kr5arc/collision/: base_link.stl  link_1.stl  link_3_motor2.stl  link_3_motor3.stl  link_3_motor4.stl  link_6.stl
kuka_kr5_support/meshes/kr5arc/visual/: link_1_motor1.stl  link_1_motor2.stl  link_2.stl  link_3.stl  link_3_motor1.stl  link_4.stl  link_5.stl
kuka_kr5_support/urdf/: kr5arc.xacro  kr5arc_macro.xacro
kuka_krl/: README.md
kuka_resources/: CMakeLists.txt  package.xml  setup.py
kuka_rsi_hw_interface/: CMakeLists.txt  package.xml
kuka_rsi_hw_interface/config/: hardware_controllers.yaml
kuka_rsi_hw_interface/launch/: controller_spawner.launch
kuka_rsi_hw_interface/test/: test_hardware_interface.launch  test_two_robots.launch
kuka_sim/: CMakeLists.txt  package.xml  setup.py
(+83 files in other folders)
