<?xml version="1.0"?>
<package>
  <name>kuka</name>
  <version>0.0.1</version>
  <description>kuka metapackage</description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>TODO</license>
  <url type="website">http://git-ipk-ntnu.dyndns.org/ros/kuka/wikis/home</url>
  <url type="repository">git@git-ipk-ntnu.dyndns.org:ros/kuka.git</url>
  <url type="bugtracker">http://git-ipk-ntnu.dyndns.org/ros/kuka/issues</url>
  <author email="lars.tingelstad@ntnu.no">Lars Tingelstad</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
