<?xml version="1.0"?>
<package>
  <name>kuka_rsi_hw_interface</name>
  <version>0.0.0</version>
  <description>A ROS-Control hardware interface for use with KUKA RSI</description>

  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/ros-industrial/kuka_experimental/wiki</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>
  <author email="lars.tingelstad@ntnu.no">Lars Tingelstad</author>

  <test_depend>gtest</test_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>transmission_interface</run_depend>

  <export>
  </export>
</package>
